# scrabble-engine

./: .gitignore  README.md  pyproject.toml
docs/: SPEC.md
scripts/: repl.py
src/scrabble_engine/: __init__.py  board.py  dawg.py  dictionary.py  engine.py  move_generator.py  query.py  scoring.py  tiles.py  word_families.py
tests/: test_blanks.py  test_board.py  test_dawg.py  test_dictionary.py  test_engine.py  test_move_generator.py  test_query.py  test_scoring.py  test_tiles.py
