[project]
name = "scrabble-engine"
version = "0.1.0"
description = "A Python Scrabble engine for dictionary lookup, move generation, and optimal play analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrabble_engine"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
